# OpenAI-API-Python-Client

./: .env.example  .gitignore  Procfile  README.md  commands.json  gunicorn.conf.py  pyproject.toml  requirements.txt  startup.sh
api/routes/: openai.py  user.py
api/schemas/: openai.py  user.py
dependencies/: auth.py  database.py  utils.py
migrations/versions/.../.../: alembic_version.py
models/: api_usage.py  base.py  user.py
services/: openai.py  user.py
tests/: conftest.py
tests/integration/: test_openai_routes.py  test_user_routes.py
tests/unit/: test_openai.py  test_user.py
